--- a/scratch/1_grad_descent/mynotes.ipynb
+++ b/scratch/1_grad_descent/mynotes.ipynb
@@ -1443,9 +1443,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tutorial",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tutorial"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1457,7 +1457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
