tutorial 5 and moving some stuff around

--- a/tutorial5_Adam_optimizer/start.ipynb
+++ b/tutorial5_Adam_optimizer/start.ipynb
@@ -5,20 +5,8 @@
    "metadata": {},
    "source": [
     "# Goal\n",
-    "* Given an MLP, $f$ \n",
-    "* Show how to calculate $$\\frac{df}{dx}$$\n",
-    "* In constrast to calculating \n",
-    "$$\\frac{df_{loss}}{dx}$$\n",
-    "---\n",
-    "If our function is    \n",
-    "$$y = x^2$$    \n",
-    "Then,   \n",
-    "\n",
-    "$$\n",
-    "\\frac{dy}{dx} = 2x\n",
-    "$$\n",
-    "\n",
-    "Then, $$\\frac{d^2y}{dx^2} = 2$$"
+    "* Model data using an MLP\n",
+    "* Use the torch optimizer Adam instead of our simple optimizer we used in past videos. "
    ]
   },
   {
