--- a/scratch/7-8_working_toward_evaluting_with_sympy/tutorial10ish.ipynb
+++ b/scratch/7-8_working_toward_evaluting_with_sympy/tutorial10ish.ipynb
@@ -24,7 +24,11 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from  sympy import *\n",
+    "import random\n",
+    "import numpy as np\n",
+    "import warnings"
    ]
   },
   {
@@ -111,12 +115,7 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from  sympy import *\n",
-    "import random\n",
-    "import numpy as np\n",
-    "import warnings"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
