julia python compare

--- a/other_ml/julia_and_optimizers/julia_playground/p3_optimization.ipynb
+++ b/other_ml/julia_and_optimizers/julia_playground/p3_optimization.ipynb
@@ -94,7 +94,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2298d60d670>]"
+       "[<matplotlib.lines.Line2D at 0x229c849c6a0>]"
       ]
      },
      "execution_count": 3,
@@ -139,18 +139,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9884098649492122"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# last_n = 5\n",
     "# n = ypoints.shape[0]\n",
